prod/directory/patches/fe/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-fe
  namespace: directory
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: directory-fe
  template: 
    metadata:
      labels:
        app: directory-fe
    spec:
      containers:
      - name: directory-fe
        image: digitalcollab/directory:latest
        resources:
          requests:
            memory: "10Mi"
            cpu: "0.02"
